--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -3120,7 +3120,6 @@
     "NativePurchaseWithUserId": true,
     "FFlagHideAvatarBuildCategoryInVR": true,
     "FFlagEditableImagePlaceFilterSupport": false,
-    "FFlagEditableImagePlaceFilterSupport_PlaceFilter": "true;18235917861;13673924577;13674045329;14023043787;14703601027;12123120785;12339044345;13344085926;16570073256;17362271377;17745270078",
     "FFlagCheckCameraAvailabilityBeforePermissions": true,
     "FFlagEnableAlwaysAvailableCamera": true,
     "FFlagAXWidgetOnePreviewRow": true,
@@ -9056,19 +9055,25 @@
     "FFlagAXFixLayeredClothingPosition": true,
     "FFlagSpotlightManager2": true,
     "FFlagUGCValidateCageMeshDistance": true,
-    "FFlagUGCValidateStraightenLimbsTransparency2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T22:44:24",
     "DFFlagFixEmptyKick": true,
     "FFlagCapturesShutterSoundHook2": true,
     "FFlagAXFixItemListEquippedAssetCheckIssueV2": true,
     "FFlagAXTTIOpaqueField": true,
-    "DFFlagSimFluidRemoveIntermediateAeroModels_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T22:56:52",
-    "FFlagEmptyKickMessageTranslation_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T23:00:18",
-    "FFlagRenderEnableGlobalInstancingMetal": true,
-    "DFFlagEmitSafetyTelemetryInCallbackEnable_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T23:19:32",
-    "DFFlagPerformanceControlEnableNewMemoryUtilityCurve_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T23:19:43",
     "DFFlagTouchEventsUseCollisionGroupsThreePhaseRollout": true,
     "FFlagAXAccessoryAdjustmentFtuxIXPEnabled2": true,
     "FFlagAXDisableHeadRefinementTooltip": true,
+    "FFlagUGCValidateStraightenLimbsTransparency2": true,
+    "FFlagAddFieldsContainerResizeFields_IXP": "1;Portal.SmallTelemetryPerfImprovements;Portal.SmallTelemetryPerfImprovements;699042779;flagbank",
+    "FFlagRefactorFormatTagKey_IXP": "1;Portal.SmallTelemetryPerfImprovements;Portal.SmallTelemetryPerfImprovements;699042779;flagbank",
+    "FFlagRobloxTelemetryRewriteDelimitedStringContains_IXP": "1;Portal.SmallTelemetryPerfImprovements;Portal.SmallTelemetryPerfImprovements;699042779;flagbank",
+    "FFlagEmptyKickMessageTranslation": true,
+    "DFFlagSimFluidRemoveIntermediateAeroModels": true,
+    "FFlagQrCodeDrawToEditableImage3_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-22T00:07:13",
+    "DFFlagUIStrokeWithRichTextEnabled": true,
+    "DFFlagPerformanceControlEnableNewMemoryUtilityCurve": true,
+    "DFFlagEmitSafetyTelemetryInCallbackEnable": true,
+    "FFlagFixUserInfoSelection_Rollout": "true;60;2024-11-22T00:25:00",
+    "FFlagCollectionServiceFixNameOverlap2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-22T00:25:12",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -10130,8 +10135,9 @@
     "FFlagTutorialsUseCameraFocus": true,
     "FFlagTutorialsUseFinishTextOnLastStep": true,
     "FFlagTutorialsUseSafeSkip": true,
-    "FFlagFixSavePlaceDialogDirtyBitRaceCondition_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T22:44:03",
     "FFlagConnectionIndicatorRevamp3": true,
+    "FFlagFixSavePlaceDialogDirtyBitRaceCondition": true,
+    "FFlagRenderEnableGlobalInstancingMetal": true,
     "FFlagVoiceChatStopSendingIceCandidate": false,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -10268,7 +10274,6 @@
     "FFlagBlendedSerpUserPresenceExperiment_v3": true,
     "FFlagRbxStorageEnableDbCacheSelfTest": true,
     "FFlagRbxStorageEnableFileCacheSelfTest": true,
-    "DFFlagUIStrokeWithRichTextEnabled": true,
     "FIntAppLaunchTrackerEnableHundredthsPercent": 500,
     "DFFlagInitializeShowDomainAsTitle": true,
     "FFlagLuaAppShouldTrackTopActions": true,
@@ -10288,7 +10293,7 @@
     "FFlagUseCommunitiesTranslation": true,
     "FFlagLuaAppDeferInteractive_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:51:04",
     "FFlagEnableRejectPromiseOnWebviewClosed": true,
-    "FFlagAppChatClosedEvent_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T23:12:57",
+    "FFlagAppChatClosedEvent": true,
     "FLogSignalRNotification": 0,
     "FStringFeature_CookieProtocolEnabled": "496;100",
     "FFlagDebugLuaAppValidateProps": true,
@@ -10309,8 +10314,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "ebb78d2841c79c94d365c91637a87a3cac1bbb8d",
-    "DFStringFlagRepoGitHashDynamicString": "ebb78d2841c79c94d365c91637a87a3cac1bbb8d",
-    "FStringFlipTimeStampFastString": "2024-11-21T23:44:35.698Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-21T23:44:35.698Z"
+    "FStringFlagRepoGitHashFastString": "717db1fb857612481108dc162ab296fb601c1958",
+    "DFStringFlagRepoGitHashDynamicString": "717db1fb857612481108dc162ab296fb601c1958",
+    "FStringFlipTimeStampFastString": "2024-11-22T00:33:17.881Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-22T00:33:17.881Z"
 }
