--- a/PCStudioBootstrapper.json
+++ b/PCStudioBootstrapper.json
@@ -167,10 +167,15 @@
     "FFlagTypesetterAllocOrCrash": true,
     "FFlagMacPersonalizedInstallerEnabled2": true,
     "FFlagWinPersonalizedInstallerEnabled2": true,
+    "FIntWin78ClientDeprecationLevel": 2,
+    "FIntWin78ClientDeprecationMessageFrequencySeconds": 79200,
+    "FIntWin78DeprecationEpochTimestamp": 1736964000,
+    "FFlagDeprecateWin78": true,
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FStringWindowsProgressiveDownloadExperimentBucketSettings": "10-1",
     "FFlagUIBloxUseFullPageModalZIndex": true,
+    "FFlagEnableSocialCards2": true,
     "FFlagWindowsBootstrapperReportPerCdnDownloadSpeeds": true,
     "FIntBootstrapper64BitStudioPercentage": 100,
     "InfluxInstallHundredthsPercentage": 1,
@@ -179,8 +184,8 @@
     "FFlagWindowsStudioFirstLaunchArgument2": true,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagNotificationPersonAddIcons": true,
-    "FStringFlagRepoGitHashFastString": "717db1fb857612481108dc162ab296fb601c1958",
-    "DFStringFlagRepoGitHashDynamicString": "717db1fb857612481108dc162ab296fb601c1958",
-    "FStringFlipTimeStampFastString": "2024-11-22T00:33:17.881Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-22T00:33:17.881Z"
+    "FStringFlagRepoGitHashFastString": "9981a4c693c5f7f577d55ec0be0133261bbd9490",
+    "DFStringFlagRepoGitHashDynamicString": "9981a4c693c5f7f577d55ec0be0133261bbd9490",
+    "FStringFlipTimeStampFastString": "2024-11-27T20:11:30.822Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-27T20:11:30.822Z"
 }
