--- a/PCClientBootstrapper.json
+++ b/PCClientBootstrapper.json
@@ -171,11 +171,11 @@
     "FIntWin78ClientDeprecationMessageFrequencySeconds": 79200,
     "FIntWin78DeprecationEpochTimestamp": 1736964000,
     "FFlagDeprecateWin78": true,
+    "FFlagAbuseReportMenuConsoleSupportRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:29:24",
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FStringWindowsProgressiveDownloadExperimentBucketSettings": "10-1",
     "FFlagUIBloxUseFullPageModalZIndex": true,
-    "FFlagEnableSocialCards2": true,
     "DFIntCrashUploadToBacktracePercentage": 100,
     "ExeVersion": "0.482.0.424268",
     "FFlagJoinTimeCounters": true,
@@ -186,8 +186,8 @@
     "InfluxHundredthsPercentage": 0,
     "InfluxInstallHundredthsPercentage": 10000,
     "ShowInstallSuccessPrompt": true,
-    "FStringFlagRepoGitHashFastString": "9981a4c693c5f7f577d55ec0be0133261bbd9490",
-    "DFStringFlagRepoGitHashDynamicString": "9981a4c693c5f7f577d55ec0be0133261bbd9490",
-    "FStringFlipTimeStampFastString": "2024-11-27T20:11:30.822Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-27T20:11:30.822Z"
+    "FStringFlagRepoGitHashFastString": "617ad1f2d6906e1d78d9a339c0cfb85ac529a623",
+    "DFStringFlagRepoGitHashDynamicString": "617ad1f2d6906e1d78d9a339c0cfb85ac529a623",
+    "FStringFlipTimeStampFastString": "2024-12-02T19:49:09.548Z",
+    "DFStringFlipTimeStampDynamicString": "2024-12-02T19:49:09.548Z"
 }
