--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -7332,7 +7332,7 @@
     "FFlagAXEnableOrganicContentTemplates2": true,
     "FFlagFixItemListHasMoreItems": true,
     "DFFlagAudioMetadataReturnIsrcEnabled": true,
-    "DFStringCommerceUniverseAllowList": "6656347044,6704585586,6710437199,1601065334,1531130248,3317679266,2711375305,1831550657,5478865922,6793242781,6820379034,4300637801,5478865922,5478863270,5478864876,5640276568,245662005,4014729424,4113086200",
+    "DFStringCommerceUniverseAllowList": "6656347044,6704585586,6710437199,1601065334,1531130248,3317679266,2711375305,1831550657,5478865922,6793242781,6820379034,4300637801,5478865922,5478863270,5478864876,5640276568,245662005,4014729424,4113086200,5747485495",
     "FFlagLazyLoadAppRoutes2": true,
     "FFlagRefactorContentProviderFindAsset3": true,
     "FFlagACETimelineUnitSeconds": true,
@@ -7699,7 +7699,7 @@
     "FFlagImproveNameLookup": true,
     "DFLogRCCMonitoring": "Error,0",
     "FFlagRenderFixBeamTrailShadowmap": true,
-    "DFStringOpenCloudSupportedMethodNamesCsv_PlaceFilter": "userNotification,ListInventoryItems,GetUniverse,GetPlace,GetGroup,ListGroupMemberships,GetOperation,GenerateUserThumbnail,TranslateText;10217794885;18224805676;72258875501699;120716572626997;4088741747;6321891709;13042495892;166986752;11945996815;15920409743;117682266943107;3095204897;2788229376;17310526882;13348194448;2965497514;12151453277;11765402359;335760407;10352680364;9847305782;8356562067;10810086665;7103997355;16999776577;137877687;4074515213;1365404657;1422269298;6432688835;14305629842;97842539803039;5783581;11162591184;6544583362;6365797841;1334669864;10895305174;15840979454;2414851778;124500565229082;16369025010;70809361986805",
+    "DFStringOpenCloudSupportedMethodNamesCsv_PlaceFilter": "userNotification,ListInventoryItems,GetUniverse,GetPlace,GetGroup,ListGroupMemberships,GetOperation,GenerateUserThumbnail,TranslateText;10217794885;18224805676;72258875501699;120716572626997;4088741747;6321891709;13042495892;166986752;11945996815;15920409743;117682266943107;3095204897;2788229376;17310526882;13348194448;2965497514;12151453277;11765402359;335760407;10352680364;9847305782;8356562067;10810086665;7103997355;16999776577;137877687;4074515213;1365404657;1422269298;6432688835;14305629842;97842539803039;5783581;11162591184;6544583362;6365797841;1334669864;10895305174;15840979454;2414851778;124500565229082;16369025010;70809361986805;2102668595;16523621982",
     "FFlagModernizeSwitchToSettingsApp": true,
     "DFFlagGetFriendsOnlineFetchNamesFromUserProfiles": true,
     "FFlagEnableFmodCfiFixes": true,
@@ -8923,7 +8923,6 @@
     "FFlagAppLocalesLogCandidateKeyUsed2": true,
     "FFlagAppLocalesLogCandidateKeyUsedIAP2": true,
     "FFlagInExpLocalesLogCandidateKeyUsed2": true,
-    "FFlagReportClientRbxmBundleSplitExperimentTreatment2": true,
     "FFlagEnableMultiPageSignup4": true,
     "FFlagAppChatConversationKeyboardOffsetCalculation": true,
     "FFlagCAPTreatmentRaceConditionTelemetry": true,
@@ -9039,7 +9038,6 @@
     "EnableIrisUpdatedCallingNotificationCompat2": "true",
     "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
     "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
-    "DFFlagFlagRolloutTestDynamicBool11_Staged": "true;SteadyState;10;30;Revert;2024-11-21T21:25:15",
     "DFFlagFlagRolloutTestDynamicBool11_IXP": "1;Portal.DFFlagFlagRolloutTestDynamicBool11;DFFlagFlagRolloutTestDynamicBool11;423748181;flagbank",
     "FFlagPerformanceControlNewEffectModel4": true,
     "FFlagAXHeadCategoryCombineEnabled4": true,
@@ -9144,9 +9142,67 @@
     "FFlagAppChatInExpConnectIconRedesign2": true,
     "FFlagAddGetActionNameToDMAction": true,
     "FFlagAvatarPublishPromptUpdateAttachments": false,
-    "AllowVideoPreRoll": true,
-    "AxisAdornmentGrabSize": 12,
+    "FFlagEnableGameJoinParamsPartyId3": true,
+    "FFlagLuaAppEnablePlaySquadButton3": true,
+    "FFlagAppChatRebrandStringUpdates": true,
+    "FFlagAppChatInExpConnectIconEnableSquadIndicator2": true,
+    "FFlagAppChatAddConnectUnibarForActiveSquad": true,
+    "FFlagAppChatMessageListInitialFetch": true,
+    "FFlagAppChatCapNewMessageRefetch": true,
+    "FFlagAppChatHideGroupNameEditForU13": true,
+    "FFlagAppChatEnableChatUserMessagesSettings": true,
+    "FFlagAppChatDisableInputBarU13": true,
+    "FFlagInExperienceMenuReorderFirstVariant1_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:24:29",
+    "FFlagSoundServiceCloseIfFmodEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:27:09",
+    "FFlagDevFrameworkFixAutocompleteDropdownMenuStyle_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:29:35",
     "CaptureCountersIntervalInMinutes": 5,
+    "FFlagIncreaseSocialContextDisplayOrder_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:36:24",
+    "FFlagRemovePSMLFromStudioPluginRibbonActionHost2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:38:12",
+    "FFlagShortcutBarMinSize_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:39:29",
+    "FFlagToastNotificationsQueueLock_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:43:57",
+    "FFlagEnablePassEventIdentifierFromWeb_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:46:22",
+    "FFlagFriendsCarouselFixExperienceName_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:47:24",
+    "FFlagProfilePlatformFixProfileHeaderInfoFromJson_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:49:45",
+    "FIntPathfindingHFBHighMemoryThrottleHundrethsPercentPoints": 10000,
+    "FFlagProfilePlatformFixNilUniverseId_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:56:25",
+    "AllowVideoPreRoll": true,
+    "DFFlagSafeUpdateKernelJoint2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:01:40",
+    "DFFlagCLI124201_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:02:13",
+    "DFFlagFixControllerManagerCrash_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:02:16",
+    "FFlagEnableAdsMouseUnlock": true,
+    "DFIntExperienceStateCaptureHighlightTransparencyPercent_PlaceFilter": "45;920587237",
+    "FFlagTerrainEditorUseTerrainChannels": true,
+    "FFlagShorelinesRemoveDialog": true,
+    "DFIntExperienceStateCaptureHighlightTransparencyPercent": 60,
+    "FFlagStudioFixPublishingDependency_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:12:38",
+    "FFlagInvalidateLightGridAsyncWhenExecutionModeChanges2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:16:28",
+    "AxisAdornmentGrabSize": 12,
+    "FFlagRenderFixSurfaceLight_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:19:58",
+    "FFlagLuaAppVpcAddMissingDeps_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:22:18",
+    "FFlagLuaAppRemoveExtraIntentEvent_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:22:38",
+    "FFlagLuaAppNoRatingMinimumAge_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:22:41",
+    "FFlagLuaAppConsoleSelfUpdateSetting_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:22:57",
+    "FFlagLuaAppUpdateMinimumAgePriority_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:23:18",
+    "FFlagLuaAppAddMissingUpsellDep_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:23:39",
+    "FFlagLuaAppMoveEgsToFirstClass_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:24:20",
+    "FFlagAbuseReportMenuConsoleSupportRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:29:24",
+    "FFlagToolboxValidateAnimationId": true,
+    "DFFlagAddContextNamesToDurationLoggerEvents": true,
+    "DFFlagEnableSkipUpdatingGlobalTelemetryInfo2": true,
+    "DFFlagFixContextInfoShutdown": true,
+    "DFFlagLogSecurityTimeout": true,
+    "FFlagEnableTelemetryService1": true,
+    "FFlagLogRenderViewCD": true,
+    "FFlagMediaGalleryFullViewMobile_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:41:23",
+    "FFlagMediaGallerySnappingTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:43:29",
+    "FFlagEnableEventIdInIOS_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:44:05",
+    "FFlagFixNilBindingGameDetailsPeekview_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:44:09",
+    "DFFlagDataStoreEnableGetVersionAtTimeAsync": true,
+    "FFlagUpdateLayoutOrderAndText": true,
+    "FFlagRenderEnableGlobalInstancingD3D11": true,
+    "FFlagBootcampCLI126192_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:48:51",
+    "FFlagFixTriangleMeshPointInside_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:49:13",
+    "FFlagInExperienceMenuResetButtonTextToRespawn_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T19:54:47",
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
     "DFFlagEnableRemoteProfiling": true,
@@ -10192,18 +10248,10 @@
     "FFlagStudioCheckDisallowedSaveTypeUsingAutoSaveFolder": true,
     "FFlagStudioTwoWayCommunicator": true,
     "FFlagStudioUseTaskBasedPlaceOpenResult": true,
-    "FFlagEnableSocialCards2": true,
-    "FFlagUpdateLayoutOrderAndText": true,
     "FFlagStudioDisambiguatePluginShortcuts": true,
     "FFlagPerformanceTelemetryACFullTime": true,
     "FFlagStudioDisambiguatePluginShortcutsLua": true,
-    "FFlagRenderEnableGlobalInstancingD3D11": true,
-    "FFlagShorelinesRemoveDialog": true,
-    "FFlagTerrainEditorUseTerrainChannels": true,
-    "FFlagEnableAdsMouseUnlock": true,
-    "DFIntExperienceStateCaptureHighlightTransparencyPercent_PlaceFilter": "45;920587237",
-    "DFIntExperienceStateCaptureHighlightTransparencyPercent": 60,
-    "FIntPathfindingHFBHighMemoryThrottleHundrethsPercentPoints": 10000,
+    "FFlagUseNativeWatcherAsSOT_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-02T18:23:11",
     "FFlagUseRelativeToRootCFrameForAccessories": true,
     "DFFlagHttpFixOsErrno": true,
     "DFFlagEnablePlaceIdsForGrantAccess_PlaceFilter": "true;16199276101",
@@ -10340,7 +10388,6 @@
     "DFFlagVisBugFixTrusses": true,
     "FFlagVoiceChatCullingDoNotClearSsrcHistory": true,
     "FFlagUseCommunitiesTranslation": true,
-    "FFlagLuaAppDeferInteractive_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:51:04",
     "FFlagAppChatClosedEvent": true,
     "FFlagReactInstanceMapDisableErrorChecking": true,
     "FFlagReactInlineMergeLanes": true,
@@ -10380,8 +10427,8 @@
     "FFlagLayoutNodeGetSharedInstanceC": true,
     "FFlagCacheReadParsePolicy": true,
     "FFlagEditableImageTelemetryUpdates": true,
-    "FStringFlagRepoGitHashFastString": "0ee5a3189020d85b1ffae5fe4d74c01851358396",
-    "DFStringFlagRepoGitHashDynamicString": "0ee5a3189020d85b1ffae5fe4d74c01851358396",
-    "FStringFlipTimeStampFastString": "2024-11-27T20:21:36.013Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-27T20:21:36.013Z"
+    "FStringFlagRepoGitHashFastString": "5af5e7cc39f7985f6cf0b77db26d12c5b15c0fef",
+    "DFStringFlagRepoGitHashDynamicString": "5af5e7cc39f7985f6cf0b77db26d12c5b15c0fef",
+    "FStringFlipTimeStampFastString": "2024-12-02T19:55:56.905Z",
+    "DFStringFlipTimeStampDynamicString": "2024-12-02T19:55:56.905Z"
 }
