--- a/PCStudioBootstrapper.json
+++ b/PCStudioBootstrapper.json
@@ -174,6 +174,11 @@
     "FFlagAbuseReportMenuConsoleSupportRefactor": true,
     "FFlagMacInstallerAddStudioArguments": true,
     "FFlagWinAccessFilenameForToken": true,
+    "FFlagChatLineAbandonedReportAnalyticsFix": true,
+    "FFlagAXAccessoryAdjustmentFtuxFlush": true,
+    "FFlagAXEnablePerceivedTTIV2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-09T18:53:49",
+    "FFlagAXSendAXStat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-09T18:53:49",
+    "FFlagPublishAvatarPromptEnabled5_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-12-09T19:14:19",
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FStringWindowsProgressiveDownloadExperimentBucketSettings": "10-1",
@@ -186,8 +191,8 @@
     "FFlagWindowsStudioFirstLaunchArgument2": true,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagNotificationPersonAddIcons": true,
-    "FStringFlagRepoGitHashFastString": "0963c2fe1e71c82c1be119b8144f43d82d759180",
-    "DFStringFlagRepoGitHashDynamicString": "0963c2fe1e71c82c1be119b8144f43d82d759180",
-    "FStringFlipTimeStampFastString": "2024-12-05T17:31:51.626Z",
-    "DFStringFlipTimeStampDynamicString": "2024-12-05T17:31:51.626Z"
+    "FStringFlagRepoGitHashFastString": "00eaf98a4c6c2915174fce6c220f67ff33d648c3",
+    "DFStringFlagRepoGitHashDynamicString": "00eaf98a4c6c2915174fce6c220f67ff33d648c3",
+    "FStringFlipTimeStampFastString": "2024-12-09T19:47:45.642Z",
+    "DFStringFlipTimeStampDynamicString": "2024-12-09T19:47:45.642Z"
 }
