--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -9369,9 +9369,10 @@
     "FFlagFlagRolloutTestStaticBool9": false,
     "FFlagContentFeedInspectAndBuySetupEnabled2": true,
     "DFFlagReportMoreMemoryStatsInMemoryProfilingSnapshots": true,
-    "FFlagUseSkyReadyState_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T19:16:34",
     "FFlagVariantMessageContentsTableToVector": true,
-    "FFlagFixAltKeyInputUWP_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T19:25:48",
+    "FFlagUseSkyReadyState": true,
+    "FFlagFixAltKeyInputUWP": true,
+    "FFlagClientToastNotificationsEnabled2": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -10487,10 +10488,13 @@
     "FFlagLuaStartPageFetchUniverseDataInLua": true,
     "DFFlagSafeAssignJointWorld": true,
     "DFFlagFixMeshScale4": true,
-    "FFlagStudioInternalWaitForLongProcessButton_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T18:52:36",
     "FFlagStudioClipboardContext": true,
-    "FLogSignalRNotification": 0,
-    "FFlagLuaAppDisallowEmptySearch_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T19:01:26",
+    "FFlagStudioInternalWaitForLongProcessButton": true,
+    "FFlagLuaAppDisallowEmptySearch": true,
+    "FFlagLuaAppAlignGameGridTable": true,
+    "FFlagDragDetectorRestartAfterPermissionChangeFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:28:25",
+    "FFlagNewOptimizeNoCollisionPrimitiveInMidphase653_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:46:14",
+    "DFIntRobloxTelemetryThrottlingRenderFidelityOnTime_Staged": "100;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T23:01:05",
     "FFlagRenderEnableGlobalInstancingMetal": true,
     "FFlagVoiceChatStopSendingIceCandidate": false,
     "FFlagShorelinesRemoveDialog": true,
@@ -10656,6 +10660,7 @@
     "DFFlagVisBugFixMaxRecusionCheck": true,
     "DFFlagVisBugFixMissingMesh": true,
     "DFFlagUseVisBugChecks": false,
+    "FLogSignalRNotification": 0,
     "FStringFeature_CookieProtocolEnabled": "496;100",
     "FFlagDebugLuaAppValidateProps": true,
     "DFLogTrackHttpRequest": 0,
@@ -10675,8 +10680,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "5d78d370af0a360fcff69ad05aedf54dc8541e20",
-    "DFStringFlagRepoGitHashDynamicString": "5d78d370af0a360fcff69ad05aedf54dc8541e20",
-    "FStringFlipTimeStampFastString": "2025-01-06T19:26:37.780Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-06T19:26:37.780Z"
+    "FStringFlagRepoGitHashFastString": "83e09f0366b4bdaabdeab7763c68836a320922d9",
+    "DFStringFlagRepoGitHashDynamicString": "83e09f0366b4bdaabdeab7763c68836a320922d9",
+    "FStringFlipTimeStampFastString": "2025-01-06T23:01:55.082Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-06T23:01:55.082Z"
 }
