--- a/iOSApp.json
+++ b/iOSApp.json
@@ -2415,7 +2415,7 @@
     "FFlagIOSSendAsymmetricSafeInsets": true,
     "FFlagFixDoubleSpacesAfterPrefixText": true,
     "FFlagHideLocalPlayerControlBubbleForVR": true,
-    "FStringPerformanceControlIncludedTunables": "Texture quality, IntegrityCheckedProcessor Queue size, SingleSurfaceApp memory pressure, Sound Cache, RenderingQuality, Streaming Distance, Video starting quality",
+    "FStringPerformanceControlIncludedTunables": "Texture quality, IntegrityCheckedProcessor Queue size, SingleSurfaceApp memory pressure, Sound Cache, RenderingQuality, Streaming Distance, Video starting quality, Launch CrossExpVoice memory pressure, Continue CrossExpVoice memory pressure",
     "DFFlagImmediateTTUpdate_DataCenterFilter": "true;232",
     "FIntAvatarEditorTimeBetweenSaves": 90,
     "FFlagChangeTopbarHeightCalculation": true,
@@ -9369,9 +9369,10 @@
     "FFlagFlagRolloutTestStaticBool9": false,
     "FFlagContentFeedInspectAndBuySetupEnabled2": true,
     "DFFlagReportMoreMemoryStatsInMemoryProfilingSnapshots": true,
-    "FFlagUseSkyReadyState_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T19:16:34",
     "FFlagVariantMessageContentsTableToVector": true,
-    "FFlagFixAltKeyInputUWP_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T19:25:48",
+    "FFlagUseSkyReadyState": true,
+    "FFlagFixAltKeyInputUWP": true,
+    "FFlagClientToastNotificationsEnabled2": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -10026,11 +10027,20 @@
     "DFFlagVisBugFixCrashOnSO": true,
     "DFFlagVisBugFixMaxRecusionCheck": true,
     "DFFlagSafeAssignJointWorld": true,
-    "FStringPerformanceControlIncludedTunables_Rollout": "Texture quality, IntegrityCheckedProcessor Queue size, SingleSurfaceApp memory pressure, Sound Cache, RenderingQuality, Streaming Distance, Video starting quality, Launch CrossExpVoice memory pressure, Continue CrossExpVoice memory pressure;60;2025-01-06T18:48:06",
-    "FFlagLuaAppDisallowEmptySearch_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T19:01:26",
     "FFlagStoreEngineContextPtrInDataModel": true,
-    "FStringFlagRepoGitHashFastString": "5d78d370af0a360fcff69ad05aedf54dc8541e20",
-    "DFStringFlagRepoGitHashDynamicString": "5d78d370af0a360fcff69ad05aedf54dc8541e20",
-    "FStringFlipTimeStampFastString": "2025-01-06T19:26:37.780Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-06T19:26:37.780Z"
+    "FFlagLuaAppDisallowEmptySearch": true,
+    "DFIntPCSCEVLaunchFeasibilityThrottleHundredthsPercent": 10000,
+    "FFlagCevIdleTimeoutTelemetry": true,
+    "DFIntCevIdleTimeoutTelemetryThrottleHundredthsPercent": 10000,
+    "FFlagLuaAppAlignGameGridTable": true,
+    "FFlagCEVFlowStart_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:06:45",
+    "FFlagCEVFlowStartPartyBegin_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:07:27",
+    "FFlagPCSCEVFeasibieAnalytics": true,
+    "FFlagDragDetectorRestartAfterPermissionChangeFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:28:25",
+    "DFIntCEVLowMemoryWarningTelemetryThrottleHundredthsPercent": 10000,
+    "FFlagCEVLowMemoryWarningAnalytics": true,
+    "FStringFlagRepoGitHashFastString": "d37f76f86554dca5634b2ae69818230b3841a513",
+    "DFStringFlagRepoGitHashDynamicString": "d37f76f86554dca5634b2ae69818230b3841a513",
+    "FStringFlipTimeStampFastString": "2025-01-06T22:56:49.320Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-06T22:56:49.320Z"
 }
